# encoded-reasoning

./: .env.example  .gitignore  README.md  config.yaml  config.yaml.example  config_aime_multi.yaml  config_gpqa_full.yaml  config_gpqa_multi.yaml  config_gpqa_openweights.yaml  config_math500_n250.yaml  config_math500_n500_gpt4o.yaml  config_math500_n500_gpt52.yaml  config_math500_n500_llama.yaml  config_math500_n500_opus.yaml  config_math500_n500_qwen.yaml  config_math500_n500_sonnet.yaml  config_math500_openweights.yaml  eval_and_plot.sh  main.py  pyproject.toml  run_experiment.sh
config/: eval_config.yaml  eval_config.yaml.example
config/examples/: base64.yaml  caesar.yaml  chinese.yaml  direct.yaml  emojispeak.yaml  filler_baseline_neutral.yaml  filler_counting.yaml  filler_dots.yaml  filler_lorem.yaml  filler_negative_general.yaml  filler_negative_personal.yaml  filler_positive_general.yaml  filler_positive_personal.yaml  filler_repeat.yaml  identity.yaml
src/encoded_reasoning/: __init__.py  adherence.py  ciphers.py  dataset.py  encoding.py  eval.py  process_dataset.py  prompt_encodings.py  run_experiment.py
src/encoded_reasoning/plotting/: plot_results.py
